# tracelet

./: Cargo.toml  README.md
examples/axum-service/: Cargo.toml
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
tracelet/: Cargo.toml
tracelet-core/: Cargo.toml
tracelet-core/src/: context.rs  lib.rs  propagation.rs
tracelet-layer/: Cargo.toml
tracelet-layer/src/: lib.rs
tracelet-layer/tests/: propagation.rs
tracelet-otlp/: Cargo.toml
tracelet-otlp/src/: encode.rs  export.rs  lib.rs  proto.rs
tracelet-otlp/tests/: otlp_http.rs
tracelet/src/: lib.rs
