[package]
name = "tracelet-layer"
description = "tracing_subscriber::Layer that captures spans into a tracelet-core RingBuffer."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tracelet-core = { path = "../tracelet-core", version = "0.1.0" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
